internal/xds/translator/testdata/out/xds-ir/oidc-cookie-suffix.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
            cookieConfigs:
              codeVerifierCookieConfig:
                path: /foo/oauth2/callback
              oauthNonceCookieConfig:
                path: /foo/oauth2/callback
            credentials:
              clientId: client.oauth.foo.com
              cookieNames:
                bearerToken: AccessToken-checkout
                codeVerifier: CodeVerifier-checkout
                idToken: IdToken-checkout
                oauthExpires: OauthExpires-checkout
                oauthHmac: OauthHMAC-checkout
                oauthNonce: OauthNonce-checkout
                refreshToken: RefreshToken-checkout
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/default/policy-for-first-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/default/policy-for-first-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            preserveAuthorizationHeader: true
            redirectPathMatcher:
              path:
                exact: /foo/oauth2/callback
            redirectUri: https://www.example.com/foo/oauth2/callback
            signoutPath:
              path:
                exact: /foo/logout
            statPrefix: securitypolicy/default/policy-for-first-route
            tokenEndpoint:
              cluster: oauth_foo_com_443
              timeout: 10s
              uri: https://oauth.foo.com/token
            useRefreshToken: true
    - match:
        path: bar
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.bar.com/oauth2/v2/auth
            cookieConfigs:
              codeVerifierCookieConfig:
                path: /bar/oauth2/callback
              oauthNonceCookieConfig:
                path: /bar/oauth2/callback
            credentials:
              clientId: client.oauth.bar.com
              cookieDomain: example.com
              cookieNames:
                bearerToken: myapp_access_token
                codeVerifier: CodeVerifier-checkout
                idToken: myapp_id_token
                oauthExpires: OauthExpires-checkout
                oauthHmac: OauthHMAC-checkout
                oauthNonce: OauthNonce-checkout
                refreshToken: RefreshToken-checkout
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/default/policy-for-second-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/default/policy-for-second-route
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            preserveAuthorizationHeader: true
            redirectPathMatcher:
              path:
                exact: /bar/oauth2/callback
            redirectUri: https://www.example.com/bar/oauth2/callback
            signoutPath:
              path:
                exact: /bar/logout
            statPrefix: securitypolicy/default/policy-for-second-route
            tokenEndpoint:
              cluster: oauth_bar_com_443
              timeout: 10s
              uri: https://oauth.bar.com/token
            useRefreshToken: true
